--- a/Objection.xcodeproj/xcshareddata/xcschemes/ObjectionIOS.xcscheme
+++ b/Objection.xcodeproj/xcshareddata/xcschemes/ObjectionIOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0640"
+   LastUpgradeVersion = "0830"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,37 +14,40 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4B25BE4A1291C43400821DC1"
-               BuildableName = "Objection-iOS"
-               BlueprintName = "Objection-iOS"
+               BlueprintIdentifier = "AB21C8751EE20464003B5E69"
+               BuildableName = "ObjectionIOS.framework"
+               BlueprintName = "ObjectionIOS"
                ReferencedContainer = "container:Objection.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4B25BE4A1291C43400821DC1"
-            BuildableName = "Objection-iOS"
-            BlueprintName = "Objection-iOS"
+            BlueprintIdentifier = "AB21C8751EE20464003B5E69"
+            BuildableName = "ObjectionIOS.framework"
+            BlueprintName = "ObjectionIOS"
             ReferencedContainer = "container:Objection.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -52,11 +55,20 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "AB21C8751EE20464003B5E69"
+            BuildableName = "ObjectionIOS.framework"
+            BlueprintName = "ObjectionIOS"
+            ReferencedContainer = "container:Objection.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
