--- a/Objection-tvOS-Info.plist
+++ b/Objection-tvOS-Info.plist
@@ -10,15 +10,13 @@
 	<string>com.atomicobject.${PRODUCT_NAME:rfc1.44identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<key>CFBundleSignature</key>
+	<string>ATOM</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.6.1</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>1.6.1</string>
 </dict>
 </plist>
